# Alexandria

./: .gitignore  README.md  master.py  pyproject.toml
datafiles/: ai.json  books.db  categories.yml  cmd_langs.yml  settings.json
src/alexandria/: ai.py  categories.py  data.py  img.py  search.py  searchGoogle.py  searchMoly.py  utils.py
src/ui/: cmd.py  index.html  script.js
src/ui/styles/: bookData.css  bookList.css  nav.css  root.css
